# SLR-Auto

./: .gitignore  README.md  app.py  config.py  main.py  new_app.py  packages.txt  plan.md  pyproject.toml  requirements.txt  setup.sh  streamlit.py
.plans/: 1_streamlit_sanity.md
data/: old_screening_prompt.txt  screening_prompt.txt  summarization_prompt.txt
experiments/: READ_next_steps.md  llm_temperature.py
full_screening/: embedding.py  utils.py
prompts/: gpt_new_prompt.txt  make_categories.txt  pdf_reading_prompt.txt  rq_criteria.txt  rq_query.txt  screen_full.txt  screen_initial.txt  screening_prompt.txt  summarization_prompt.txt  synthesize_category.txt
reports/: 05_atlas_paper_draft.md  07_deployment_guide.md  09_run_instructions.md  Proxy_technical_brief.md  UI_flow.md  deployment_guide.md  final_draft_pipeline.md  frontend_features.md  repo_technical_guide.md  report_structure.md  slides_outline.md
scripts/: generate_queries_for_config.py  generated_config.txt  generated_config_av.txt  generated_config_new.txt  get_session.py  proxy_helper_instructions.txt
src/: app_helpers.py  enrich_openalex.py  enrich_parallel.py  enrich_semanticscholar.py  enrich_sequential.py  fetch_arxiv.py  fetch_crossref.py  fetch_ieee.py  fetch_utils.py  filter_papers.py  gpt_categories.py  gpt_client.py  gpt_criteria.py  gpt_research_q.py  gpt_screener_full.py  gpt_screener_initial.py  gpt_synthesis.py  highly_relevant.py  ieee_client.py  llm_reader.py  llm_screener.py  llm_screener_bullets.py  marker_convert.py  paper_reviews.py  parse_bullets_to_markdown.py  report.py  (+7 more)
(+402 files in other folders)
